Change width of book-body to auto

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -118,7 +118,7 @@ $border-radius: 7px;
   @media (min-width: 600px) {
     left: 0;
     position: relative;
-    width: 100%;
+    width: auto;
     max-height: unset;
     transition: unset;
     margin-left: 300px;
