sticky sidebar upon scroll

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -13,6 +13,7 @@
 
   {{ super() }}
   <div class="custom-book-header-content">View all topics</div>
+  <div class="clearfix"></div>
 
   {% include "./_footer.html" %}
   {% include "./_quantum.html" %}
