--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -100,6 +100,14 @@ $border-radius: 7px;
     transition: none;
   }
 }
+body.scrolled {
+  .book > .book-summary {
+    @media (min-width: 600px) {
+      position: sticky;
+      float: left;
+    }
+  }
+}
 
 .with-summary > .book-summary {
   max-height: 600px;
@@ -522,4 +530,6 @@ $border-radius: 7px;
   }
 }
 
-
+.clearfix {
+  clear: both;
+}
