add sidebar container

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -19,3 +19,9 @@
   {% include "./_quantum.html" %}
 
 {% endblock %}
+
+{% block book_sidebar %}
+	<div id="book-sidebar-container">
+	  {{ super() }}
+	</div>
+{% endblock %}
