--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -242,6 +242,31 @@ $border-radius: 7px;
 // add nio css theme styles
 .markdown-section {
   color: $palette-black;
+  img {
+    display: block;
+    margin: 10px auto;
+    background-color: #fff;
+    &.left {
+      margin: 10px 0;
+      padding: 0;
+      border-radius: 0;
+    }
+    &.right {
+      @media screen and (min-width: 600px) {
+        float: right;
+        margin-left: 15px;
+      }
+    }
+    &.display{
+      padding: 20px;
+      margin: 30px auto;
+    }
+    &.border {
+      border-radius: $border-radius;
+      padding: 10px;
+      border: 1px solid #ced4da;
+    }
+  }
   hr {
     border-top: 1px solid $palette-light!important;
     margin: 45px 0 25px 0!important;
@@ -521,5 +546,3 @@ $border-radius: 7px;
     background: rgba($palette-zinc, 0.5);
   }
 }
-
-
