add licensing, update footer links and keywords, add semicolon to CSS

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -37,28 +37,29 @@
                     <ul id="menu-footer-menu" class="menu">
                         <li class="menu-item menu-company"><a>company</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-partner"><a href="https://niolabs.com/partner/">Partner</a></li>
-                                <li class="menu-item menu-team"><a href="https://niolabs.com/team/">Team</a></li>
-                                <li class="menu-item menu-careers"><a href="https://niolabs.com/careers/">Careers</a></li>
-                                <li class="menu-item menu-blog"><a href="https://niolabs.com/blog/">Blog</a></li>
-                                <li class="menu-item menu-press"><a href="https://niolabs.com/press/">Press</a></li>
-                                <li class="menu-item menu-contact"><a href="https://niolabs.com/contact/">Contact us</a></li>
+                                <li class="menu-item menu-partner"><a href="https://niolabs.com/partner">Partner</a></li>
+                                <li class="menu-item menu-partner"><a href="https://niolabs.com/licensing">Licensing</a></li>
+                                <li class="menu-item menu-team"><a href="https://niolabs.com/team">Team</a></li>
+                                <li class="menu-item menu-careers"><a href="https://niolabs.com/careers">Careers</a></li>
+                                <li class="menu-item menu-blog"><a href="https://niolabs.com/blog">Blog</a></li>
+                                <li class="menu-item menu-press"><a href="https://niolabs.com/press">Press</a></li>
+                                <li class="menu-item menu-contact"><a href="https://niolabs.com/contact">Contact us</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-products"><a>products</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/nio-platform/">nio platform</a></li>
-                                <li class="menu-item menu-system-designer"><a href="https://niolabs.com/product/system-designer/">System Designer</a></li>
-                                <li class="menu-item menu-pubkeeper"><a href="https://niolabs.com/product/pubkeeper/">Pubkeeper</a></li>
-                                <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks/">Blocks</a></li>
+                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/nio-platform">nio Platform</a></li>
+                                <li class="menu-item menu-system-designer"><a href="https://niolabs.com/product/system-designer">System Designer</a></li>
+                                <li class="menu-item menu-pubkeeper"><a href="https://niolabs.com/product/pubkeeper">Pubkeeper</a></li>
+                                <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks">Blocks</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-tools"><a>build & learn</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-go-to-designer"><a href="https://designer.n.io/">Go to Designer</a></li>
+                                <li class="menu-item menu-go-to-designer"><a href="https://designer.n.io">Go to Designer</a></li>
                                 <li class="menu-item"><a href="https://docs.n.io">Docs</a></li>
                                 <li class="menu-item"><a href="https://workshops.n.io">Workshops</a></li>
-                                <li class="menu-item"><a href="https://blocks.n.io">Block library</a></li>
+                                <li class="menu-item"><a href="https://blocks.n.io">Block Library</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-nio"><a>nio platform</a>
