--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -9,7 +9,7 @@ $border-radius: 7px;
   -ms-overflow-style: none;
   color: $palette-black;
   &::-webkit-scrollbar {
-    width: 0 !important
+    width: 0 !important;
   }
 }
 
