align pre style in accordion left

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -520,6 +520,9 @@ $border-radius: 7px;
   .accordionContent {
     text-align: center;
     max-height: 1000px;
+    pre {
+      text-align: left;
+    }
     @media print { max-height: unset; }
   }
   .accordionButton {
