--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -22,6 +22,19 @@ $border-radius: 7px;
     padding-left: 3rem;
     border-radius: $border-radius;
     border: none;
+    p:first-of-type {
+      color: $palette-slate;
+      &::after {
+        content: '';
+        display: block;
+        position: relative;
+        top: 5px;
+        width: 60px;
+        height: 3px;
+        border-radius: 5px;
+        background-color: $palette-snow;
+      }
+    }
   }
   .blockquote-icon {
     margin-right: 0.5rem;
@@ -31,13 +44,6 @@ $border-radius: 7px;
     p:first-of-type {
       color: $palette-primary;
       &::after {
-        content: '';
-        display: block;
-        position: relative;
-        top: 5px;
-        width: 60px;
-        height: 3px;
-        border-radius: 5px;
         background-color: $palette-primary;
       }
     }
@@ -47,13 +53,6 @@ $border-radius: 7px;
     p:first-of-type {
       color: $palette-warning;
       &::after {
-        content: '';
-        display: block;
-        position: relative;
-        top: 5px;
-        width: 60px;
-        height: 3px;
-        border-radius: 5px;
         background-color: $palette-warning;
       }
     }
@@ -63,13 +62,6 @@ $border-radius: 7px;
     p:first-of-type {
       color: $palette-danger;
       &::after {
-        content: '';
-        display: block;
-        position: relative;
-        top: 5px;
-        width: 60px;
-        height: 3px;
-        border-radius: 5px;
         background-color: $palette-danger;
       }
     }
@@ -79,13 +71,6 @@ $border-radius: 7px;
     p:first-of-type {
       color: $palette-affirmative;
       &::after {
-        content: '';
-        display: block;
-        position: relative;
-        top: 5px;
-        width: 60px;
-        height: 3px;
-        border-radius: 5px;
         background-color: $palette-affirmative;
       }
     }
