add new header and footer css

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -4,19 +4,7 @@
             <div class="footer__contact">
                 <div class="logos">
                     <a href="https://niolabs.com" class="footer__logo logo--niolabs">
-                      <svg id="footer-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1548 452" class="footer__logo">
-                        <defs>
-                          <style>.cls-1{fill:#e6e9ee;}.cls-2{fill:#fff;}</style>
-                        </defs>
-                        <title>niolabs_logo_light</title>
-                        <path class="cls-1" d="M545,86.56V328.36H503.15V86.56Z"/>
-                        <path class="cls-1" d="M717.28,157.82h40.47V328.36H718l-2.08-24.91c-9.69,20.06-36.32,29.75-55.35,30.1-50.51.35-87.87-30.79-87.87-90.63,0-58.81,39.09-89.6,88.91-89.25,22.83,0,44.62,10.72,54.31,27.68Zm-102.4,85.1c0,32.52,22.49,51.89,50.51,51.89,66.42,0,66.42-103.43,0-103.43C637.37,191.37,614.89,210.4,614.89,242.92Z"/>
-                        <path class="cls-1" d="M832.13,86.56V181c10-17.64,38.05-27.33,56-27.33,49.81,0,86.83,30.44,86.83,89.25,0,56-37.71,89.25-87.87,89.25-20.76,0-41.86-6.92-55-27.33l-2.77,23.52H789.92V86.56Zm2.77,156.36c0,30.79,22.83,50.16,49.47,50.16,27,0,48.43-20.41,48.43-50.16,0-30.79-21.45-49.81-48.43-49.81C857.73,193.1,834.9,213.17,834.9,242.92Z"/>
-                        <path class="cls-1" d="M1117.52,203.14c-12.11-11.41-25.95-15.22-42.2-15.22-20.06,0-31.13,6.23-31.13,16.95,0,11.07,10,17.3,31.83,18.68,32.17,2.08,73,9.34,73,54.66,0,30.1-24.56,56-73.34,56-27,0-54-4.5-78.87-30.44l20.76-30.1c12.11,13.49,39.78,23.52,58.81,23.87,15.91.35,30.79-8,30.79-20.41,0-11.76-9.69-16.61-33.9-18-32.17-2.42-70.57-14.18-70.57-52.93,0-39.44,40.82-53.27,72-53.27,26.64,0,46.7,5.19,66.42,22.49Z"/>
-                        <path class="cls-2" d="M139.57,328.86V239.25c0-26-14.24-45.84-41.33-45.84-26.05,0-43.76,21.88-43.76,47.93v87.52h-42V157.29H50.31l2.78,23.27c17.37-17,34.73-25.71,56.26-25.71,40.29,0,72.59,30.22,72.59,84.05v90Z"/>
-                        <path class="cls-2" d="M263.33,109.35c0,33-50,33-50,0S263.33,76.36,263.33,109.35Zm-46.19,47.59V328.86h42.37V156.94Z"/>
-                        <path class="cls-2" d="M471.72,243.42c0,49.32-33.69,89.26-89.26,89.26s-88.91-39.94-88.91-89.26c0-49,34-89.26,88.57-89.26S471.72,194.45,471.72,243.42Zm-135.8,0c0,26.05,15.63,50.36,46.54,50.36S429,269.47,429,243.42c0-25.7-18.06-50.7-46.54-50.7C351.9,192.71,335.92,217.72,335.92,243.42Z"/>
-                      </svg>
+                      <img src="data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1144 257' height='30px'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%23e6e9ee%3B%7D.cls-2%7Bfill:%23fff%3B%7D%3C/style%3E%3C/defs%3E%3Ctitle%3Efinal_niolabs_logo_light%3C/title%3E%3Cpath class='cls-1' d='M536%2C5.56V247.36H494.15V5.56Z'/%3E%3Cpath class='cls-1' d='M708.28%2C76.82h40.47V247.36H709l-2.08-24.91c-9.69%2C20.06-36.32%2C29.75-55.35%2C30.1-50.51.35-87.87-30.79-87.87-90.63%2C0-58.81%2C39.09-89.6%2C88.91-89.25%2C22.83%2C0%2C44.62%2C10.72%2C54.31%2C27.68Zm-102.4%2C85.1c0%2C32.52%2C22.49%2C51.89%2C50.51%2C51.89%2C66.42%2C0%2C66.42-103.43%2C0-103.43C628.37%2C110.37%2C605.89%2C129.4%2C605.89%2C161.92Z'/%3E%3Cpath class='cls-1' d='M823.13%2C5.56V100c10-17.64%2C38.05-27.33%2C56-27.33C929%2C72.67%2C966%2C103.11%2C966%2C161.92c0%2C56-37.71%2C89.25-87.87%2C89.25-20.76%2C0-41.86-6.92-55-27.33l-2.77%2C23.52H780.92V5.56Zm2.77%2C156.36c0%2C30.79%2C22.83%2C50.16%2C49.47%2C50.16%2C27%2C0%2C48.43-20.41%2C48.43-50.16%2C0-30.79-21.45-49.81-48.43-49.81C848.73%2C112.1%2C825.9%2C132.17%2C825.9%2C161.92Z'/%3E%3Cpath class='cls-1' d='M1108.52%2C122.14c-12.11-11.41-25.95-15.22-42.2-15.22-20.06%2C0-31.13%2C6.23-31.13%2C16.95%2C0%2C11.07%2C10%2C17.3%2C31.83%2C18.68%2C32.17%2C2.08%2C73%2C9.34%2C73%2C54.66%2C0%2C30.1-24.56%2C56-73.34%2C56-27%2C0-54-4.5-78.87-30.44l20.76-30.1c12.11%2C13.49%2C39.78%2C23.52%2C58.81%2C23.87%2C15.91.35%2C30.79-8%2C30.79-20.41%2C0-11.76-9.69-16.61-33.9-18-32.17-2.42-70.57-14.18-70.57-52.93%2C0-39.44%2C40.82-53.27%2C72-53.27%2C26.64%2C0%2C46.7%2C5.19%2C66.42%2C22.49Z'/%3E%3Cpath class='cls-2' d='M130.57%2C247.86V158.25c0-26-14.24-45.84-41.33-45.84-26.05%2C0-43.76%2C21.88-43.76%2C47.93v87.52h-42V76.29H41.31l2.78%2C23.27c17.37-17%2C34.73-25.71%2C56.26-25.71%2C40.29%2C0%2C72.59%2C30.22%2C72.59%2C84.05v90Z'/%3E%3Cpath class='cls-2' d='M254.33%2C28.35c0%2C33-50%2C33-50%2C0S254.33-4.64%2C254.33%2C28.35ZM208.14%2C75.94V247.86h42.37V75.94Z'/%3E%3Cpath class='cls-2' d='M462.72%2C162.42c0%2C49.32-33.69%2C89.26-89.26%2C89.26s-88.91-39.94-88.91-89.26c0-49%2C34-89.26%2C88.57-89.26S462.72%2C113.45%2C462.72%2C162.42Zm-135.8%2C0c0%2C26.05%2C15.63%2C50.36%2C46.54%2C50.36S420%2C188.47%2C420%2C162.42c0-25.7-18.06-50.7-46.54-50.7C342.9%2C111.71%2C326.92%2C136.72%2C326.92%2C162.42Z'/%3E%3C/svg%3E" alt="niolabs logo" class="footer__logo" />
                     </a>
                     <div class="social-icon-container">
                       <a href="https://twitter.com/niolabs" target="_blank" class="social-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
@@ -48,18 +36,18 @@
                         </li>
                         <li class="menu-item menu-products"><a>products</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-platform"><a href="https://niolabs.com/product/nio-platform">nio Platform</a></li>
-                                <li class="menu-item menu-system-designer"><a href="https://niolabs.com/product/system-designer">System Designer</a></li>
-                                <li class="menu-item menu-pubkeeper"><a href="https://niolabs.com/product/pubkeeper">Pubkeeper</a></li>
-                                <li class="menu-item menu-blocks"><a href="https://niolabs.com/product/blocks">Blocks</a></li>
+                                <li class="menu-item menu-platform allow-caps"><a href="https://niolabs.com/product/nio-platform">nio Platform</a></li>
+                                <li class="menu-item menu-system-designer allow-caps"><a href="https://niolabs.com/product/system-designer">nio System Designer</a></li>
+                                <li class="menu-item menu-pubkeeper allow-caps"><a href="https://niolabs.com/product/pubkeeper">Pubkeeper</a></li>
+                                <li class="menu-item menu-blocks allow-caps"><a href="https://niolabs.com/product/blocks">nio Blocks</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-tools"><a>build & learn</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-go-to-designer"><a href="https://designer.n.io">Go to Designer</a></li>
+                                <li class="menu-item menu-go-to-designer allow-caps"><a href="https://designer.n.io">go to Designer</a></li>
                                 <li class="menu-item"><a href="https://docs.n.io">Docs</a></li>
                                 <li class="menu-item"><a href="https://workshops.n.io">Workshops</a></li>
-                                <li class="menu-item"><a href="https://blocks.n.io">Block Library</a></li>
+                                <li class="menu-item allow-caps"><a href="https://blocks.n.io">nio Block Library</a></li>
                             </ul>
                         </li>
                         <li class="menu-item menu-nio"><a>nio platform</a>
