Update licensing link to pricing in footer

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -26,7 +26,7 @@
                         <li class="menu-item menu-company"><a>company</a>
                             <ul class="sub-menu">
                                 <li class="menu-item menu-partner"><a href="https://niolabs.com/partner">Partner</a></li>
-                                <li class="menu-item menu-partner"><a href="https://niolabs.com/licensing">Licensing</a></li>
+                                <li class="menu-item menu-partner"><a href="https://niolabs.com/pricing">Pricing</a></li>
                                 <li class="menu-item menu-team"><a href="https://niolabs.com/team">Team</a></li>
                                 <li class="menu-item menu-careers"><a href="https://niolabs.com/careers">Careers</a></li>
                                 <li class="menu-item menu-blog"><a href="https://niolabs.com/blog">Blog</a></li>
