--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -52,10 +52,10 @@
                         </li>
                         <li class="menu-item menu-nio"><a>nio platform</a>
                             <ul class="sub-menu">
-                                <li class="menu-item"><a href="https://app.n.io/support">Support</a></li>
-                                <li class="menu-item"><a href="https://app.n.io/support/faqs">FAQ</a></li>
-                                <li class="menu-item"><a href="https://app.n.io/support/contact">Contact us</a></li>
-                                <li class="menu-item"><a href="https://app.n.io/settings">Account</a></li>
+                                <li class="menu-item"><a href="https://account.n.io/support">Support</a></li>
+                                <li class="menu-item"><a href="https://account.n.io/support/faqs">FAQ</a></li>
+                                <li class="menu-item"><a href="https://account.n.io/support/contact">Contact us</a></li>
+                                <li class="menu-item"><a href="https://account.n.io/settings">Account</a></li>
                                 <li class="menu-item"><a href="https://forum.n.io">Forum</a></li>
                             </ul>
                         </li>
