--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="copyright">
-            <a href="https://niolabs.com/privacy">Privacy Policy</a> | <a href="https://niolabs.com/terms">Terms and Conditions</a> | <a href="https://niolabs.com/legal">Legal</a>
+            <a href="https://niolabs.com/legal/privacy-policy">Privacy Policy</a> | <a href="https://niolabs.com/legal/terms">Terms and Conditions</a> | <a href="https://niolabs.com/legal">Legal</a>
             <br>
             <a href="https://docs.n.io/copyright.html">&copy; n.io innovation, LLC. All Rights Reserved.</a>
         </div>
