update designer links to app.n.io/design

--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -49,7 +49,7 @@
           </a>
         </li>
         <li class="nav__list--item nav__list--item--designer nav__list--item--last nav__list--session">
-          <a href="https://designer.n.io" target="_blank">
+          <a href="https://app.n.io/design" target="_blank">
           <button class="n-button n-button--primary">
             go to designer
           </button>
