--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -44,7 +44,7 @@
                         </li>
                         <li class="menu-item menu-tools"><a>build & learn</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-go-to-designer allow-caps"><a href="https://designer.n.io">go to Designer</a></li>
+                                <li class="menu-item menu-go-to-designer allow-caps"><a href="https://app.n.io/design">go to Designer</a></li>
                                 <li class="menu-item"><a href="https://docs.n.io">Docs</a></li>
                                 <li class="menu-item"><a href="https://workshops.n.io">Workshops</a></li>
                                 <li class="menu-item allow-caps"><a href="https://blocks.n.io">nio Block Library</a></li>
